testdata/baselines/reference/submodule/conformance/override_js4.errors.txt
a.js(5,17): error TS8010: Type annotations can only be used in TypeScript files.
a.js(7,5): error TS4123: This member cannot have a JSDoc comment with an 'override' tag because it is not declared in the base class 'A'. Did you mean 'doSomething'?


==== a.js (2 errors) ====
    class A {
        doSomething() {}
    }
    
    class B extends A {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        /** @override  */
        doSomethang() {}
        ~~~~~~~~~~~
!!! error TS4123: This member cannot have a JSDoc comment with an 'override' tag because it is not declared in the base class 'A'. Did you mean 'doSomething'?
    }
    